Fixed bug #74840 (Opcache overwrites argument of GENERATOR_RETURN within finally)